--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mobx-react": "^4.2.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-root-toast": "^1.3.0",
     "react-native-storage": "^0.2.2",
     "react-native-swipeout": "^2.2.2",
     "react-native-tab-navigator": "^0.3.3",
