--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-react-native": "1.9.2",
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest-expo": "~19.0.0",
+    "babel-preset-react-native-stage-0": "1.0.1",
+    "jest-expo": "19.0.0",
     "react-native-scripts": "1.1.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -22,15 +22,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^19.0.0",
-    "mobx": "^3.1.15",
-    "mobx-react": "^4.2.1",
+    "expo": "19.0.0",
+    "mobx": "3.1.15",
+    "mobx-react": "4.2.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1",
-    "react-native-root-toast": "^1.3.0",
-    "react-native-storage": "^0.2.2",
-    "react-native-swipeout": "^2.2.2",
-    "react-native-tab-navigator": "^0.3.3",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native": "0.46.1",
+    "react-native-root-toast": "1.3.0",
+    "react-native-storage": "0.2.2",
+    "react-native-swipeout": "2.2.2",
+    "react-native-tab-navigator": "0.3.3",
+    "react-navigation": "1.0.0-beta.11"
   }
 }
